# rainfall

./: .dockerignore  Dockerfile  LICENSE  README.md  config.yaml  pyproject.toml  tox.ini
.github/workflows/: docker-publish.yml
deployment/: kubernetes.yaml
features/: environment.py  example-config.yaml  govapiclient.feature  service.feature
features/steps/: govapiclient.py  service.py
rainfall/: __main__.py  app.py  config_loader.py  govapi.py
